--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,55 @@
-﻿annotated-types==0.5.0
-anyio==3.7.1
-charset-normalizer==3.2.0
-click==8.1.6
-colorama==0.4.6
-cycler==0.11.0
-exceptiongroup==1.1.3
-fastapi==0.101.1
-filelock==3.12.2
-gitdb==4.0.10
-GitPython==3.1.32
-h11==0.14.0
-idna==3.4
-Jinja2==3.1.2
-kiwisolver==1.4.4
-MarkupSafe==2.1.3
-mpmath==1.3.0
-opencv-python==4.8.0.76
-opencv-python-headless==4.8.0.76
-packaging==23.1
-pandas==2.0.3
-Pillow==10.0.0
-psutil==5.9.5
-py-cpuinfo==9.0.0
-pydantic==2.1.1
-pydantic-core==2.4.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-python-multipart==0.0.6
-pytz==2023.3
-PyYAML==6.0.1
-requests==2.31.0
-scipy==1.11.1
-seaborn==0.12.2
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-starlette==0.27.0
-sympy==1.12
-torch==2.0.1
-torchvision==0.15.2
-tqdm==4.66.1
-typing-extensions==4.7.1
-tzdata==2023.3
-ultralytics==8.0.155
-urllib3==2.0.4
-uvicorn==0.23.2
-zipp==3.16.2
+annotated-types
+anyio
+certifi
+charset-normalizer
+click
+colorama
+contourpy
+cycler
+exceptiongroup
+fastapi
+filelock
+fonttools
+gitdb
+GitPython
+h11
+idna
+importlib-resources
+Jinja2
+kiwisolver
+MarkupSafe
+matplotlib
+mpmath
+networkx
+numpy
+opencv-python
+opencv-python-headless
+packaging
+pandas
+Pillow
+psutil
+py-cpuinfo
+pydantic
+pydantic-core
+pyparsing
+python-dateutil
+python-multipart
+pytz
+PyYAML
+requests
+scipy
+seaborn
+six
+smmap
+sniffio
+starlette
+sympy
+torch
+torchvision
+tqdm
+typing-extensions
+tzdata
+ultralytics
+urllib3
+uvicorn
+zipp
